# LipiPala

./: contributing.md  project-structure.txt  pyproject.toml  readme.md
lipipala/: app.py  config.py  main.py
lipipala/api/v1/: routes.py
lipipala/core/: speech_recognition.py
lipipala/core/speech/: exceptions.py  service.py
