[tool.poetry]
name = "lipipala"
version = "0.1.0"
description = "Preserving India's linguistic heritage through AI"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
pydantic = "^1.10.7"
torch = "^2.0.0"
torchaudio = "^2.0.1"
librosa = "^0.10.0"
numpy = "^1.24.2"
python-decouple = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"